--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./ # Change to ./dist or ./build if you have a build step
+          publish_dir: ./_site # Change to ./dist or ./build if you have a build step
           publish_branch: gh-pages # This 'auto generates' the branch
